--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python = "^3.10"
 protobuf = "^4.21.2"
 cryptography = "^37.0.4"
 coloredlogs = "^15.0.1"
+zstd = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.13.4"
