--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,31 +19,27 @@ coloredlogs = "^15.0.1"
 zstd = "^1.5.2"
 
 [tool.poetry.dev-dependencies]
-pylint = "^2.13.4"
-flake8-annotations = "^2.8.0"
-flake8-alfred = "^1.1.1"
-flake8-black = "^0.3.2"
-flake8-bugbear = "^22.3.23"
-flake8-comprehensions = "^3.8.0"
-flake8-multiline-containers = "^0.0.18"
-flake8-simplify = "^0.19.2"
-flake8-cognitive-complexity = "^0.1.0"
-flake8-no-pep420 = "^2.2.0"
-flake8-builtins = "^1.5.3"
-flake8-bandit = "^3.0.0"
-flake8-eradicate = "^1.2.0"
-black = "^22.3.0"
-pyproject-flake8 = "^0.0.1-alpha.3"
+black = "^23.3.0"
+isort = "^5.12.0"
+mypy = "^1.3.0"
+flake8 = "^6.0.0"
+wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git" }
+pre-commit = "^3.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.flake8]
-exclude = "_compiled"
-max-line-length = 120
-extend-ignore = "ANN204,E265,E800,E266,B010,S101"
-max-cognitive-complexity = 40
-suppress-none-returning = "true"
-suppress-dummy-args = "true"
-show-source = "true"
+[tool.isort]
+profile = "black"
+skip = [
+        "whiteproto/_proto/**/*"
+]
+
+[tool.mypy]
+strict = true
+exclude = [
+        "whiteproto/_proto/**/*"
+]
+ignore_missing_imports = true
+warn_unused_ignores = false
