--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,9 @@ jobs:
       with:
         version: 1.11.1
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v2
+
     - name: Install Poetry
       uses: snok/install-poetry@v1
 
