--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,6 @@ authors = ["Stanislav <ih3xcode@protonmail.com>"]
 license = "Proprietary"
 include = ["whiteproto/_proto/_compiled/**/*_pb2.py"]
 
-[tool.poetry.group.dev.dependencies]
-toml = "^0.10.2"
-
-[tool.redeyes.protoc]
-proto-dir = "proto"
-dest-dir = "whiteproto/_proto/_compiled"
-required-protos = ["org.redeyes.secure"]
-
 [tool.poetry.dependencies]
 python = "^3.10"
 protobuf = "^4.21.2"
@@ -21,13 +13,14 @@ cryptography = "^41.0.0"
 coloredlogs = "^15.0.1"
 zstd = "^1.5.2"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
 isort = "^5.12.0"
 mypy = "^1.3.0"
 flake8 = "^6.0.0"
 wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git" }
 pre-commit = "^3.3.2"
+types-protobuf = "^4.23.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
