--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,5 @@
 [mypy]
 strict = true
-exclude = (?x)(
-	   whiteproto/_proto
-    )
+exclude = (?x)(whiteproto\/_proto\/.*)
 ignore_missing_imports = true
 warn_unused_ignores = false
